# sm90-fp8-wgrad

./: .gitignore  NOTICE.md  README.md  pyproject.toml  requirements-cu13.txt
artifacts/sm90_fp8_dense_matmul_20260629T201037Z/: results.csv  results.json  summary.md
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/: README.txt  matrix_jobs.tsv  matrix_runs.tsv
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/deepseek_v3/ep1/balanced/deepgemm/: command.txt  summary.csv  summary.json  summary.md
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/deepseek_v3/ep1/balanced/sonic_custom/: command.txt  results.json  summary.csv  summary.md
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/deepseek_v3/ep1/skewed/deepgemm/: command.txt  summary.csv  summary.json  summary.md
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/deepseek_v3/ep1/skewed/sonic_custom/: command.txt  results.json  summary.csv  summary.md
artifacts/sm90_fp8_wgrad_matrix_full_20260629T100608Z/deepseek_v3/ep16/balanced/deepgemm/: command.txt  summary.csv  summary.json  summary.md
docs/: dense_matmul.md  kernel_contract.md  results.md  results_flat.csv
scripts/: benchmark_dense_matmul.py  benchmark_wgrad.py  check_correctness.py  check_env.py  render_matrix_results.py  run_model_shape_matrix.sh  sweep_seq_lens.py
src/sm90_fp8_wgrad/: __init__.py  block_meta.py  checks.py  deepgemm_baseline.py  gemm_sm90.py  interface.py  layout_mode.py  quant.py  sonic_baseline.py  synthetic.py  timing.py
(+172 files in other folders)
