[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm90-fp8-wgrad"
version = "0.1.0"
description = "Compute-only SM90 FP8 grouped Wgrad benchmark against SonicMoE BF16 and DeepGEMM FP8."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
